Fixes on responsive on smallers screens ( projects mainly )

--- a/responsive.css
+++ b/responsive.css
@@ -1310,6 +1310,7 @@
 
     .carousel-container {
         margin: 0;
+        padding: 0;
         display: flex;
         flex-direction: row;
         align-items: flex-start;
@@ -1322,24 +1323,19 @@
     .project-container {
         display: flex;
         flex-direction: column;
+        justify-content: flex-end;
         align-content: space-between;
         align-items: center;
         width: 100%;
         flex-shrink: 0;
         flex-grow: 1;
-        flex-direction: column;
+
 
     }
 
     .project-picture {
         padding: 0;
         flex-shrink: 1;
-    }
-
-    .project-picture.special {
-        padding: 0;
-        flex-shrink: 1;
-        object-fit: scale-down;
     }
 
     .project-picture img { 
